@@ -41,6 +41,9 @@ class PopulateRevisionLength extends LoggedUpdateMaintenance {
 		$db = $this->getDB( DB_MASTER );
 		if ( !$db->tableExists( 'revision' ) ) {
 			$this->error( "revision table does not exist", true );
+		} else if ( !$db->fieldExists( 'updatelog', 'rev_sha1', __METHOD__ ) ) {
+			$this->output( "rev_sha1 column does not exist\n", true );
+			return false;
 		}
 		$this->output( "Populating rev_len column\n" );
 
